# GumPython

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
changelog.d/: 20220804_172110_wsi.haidr.rst
docs/: conf.py  index.rst
gumpython/: __init__.py  constants.py  exceptions.py  run_command.py  style.py  utils.py
gumpython/arguments/: __init__.py  arguments.py
gumpython/commands/: __init__.py  choose.py  command.py  confirm.py  filter.py  format.py  input.py  join.py  spin.py  style.py  write.py
gumpython/flags/: __init__.py  choose_flags.py  confirm_flags.py  filter_flags.py  flags.py  format_flags.py  input_flags.py  join_flags.py  spin_flags.py  style_flags.py  write_flags.py
gumpython/inputs/: __init__.py  alignment.py  basic.py  border.py  color.py  format.py  inputs.py  position.py  spinner.py
gumpython/inputs/help_inputs/: alignment_types.py  border_types.py  color.py  format_types.py  spinner_types.py
gumpython/validators/: __init__.py  validators.py
